tests/valid/.cvsignore
*.cs
*.d
*.dv
*.date
*.date0
*.date3
*.dep
*.err
*.int
*.int0
*.int2
*.int3
*.log
*.mh
*.opt
*.optdate
*.res
undead_proc.h
CLEAN
.mgnuc_opts
.mgnuc_copts
FAILED_TESTS
runtests.errs
Prof.CallPair
Prof.Decl
Prof.MemoryCells
Prof.MemoryWords
