tests/invalid/purity/.cvsignore
*.d
*.date
*.date0
*.date3
*.dep
*.err_res*
*.int
*.int0
*.int2
*.int3
*.dv
*.c
.allres
CLEAN
FAILED_TESTS
runtests.errs
.mgnuc_copts
.mgnuc_opts
Prof.CallPair
Prof.Decl
Prof.MemoryCells
Prof.MemoryWords
